--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -55,18 +55,19 @@ a {
     border-radius: 3px;
 }
 
-#username-page .title {
+.title {
     font-size: 25px;
     font-weight: 500;
     color: #303030;
     letter-spacing: 1px;
+    margin-bottom: 20px;
 }
 
-#username-page .form-group {
-    margin-bottom: 15px;
+.form-group {
+    margin-bottom: 20px;
 }
 
-#username-page .form-control {
+.form-control {
     width: 100%;
     height: 45px;
     line-height: 45px;
@@ -76,7 +77,7 @@ a {
     font-size: 16px;
 }
 
-#username-page .username-submit {
+.username-submit {
     width: 100%;
     height: 45px;
     line-height: 45px;
@@ -84,6 +85,19 @@ a {
     font-weight: 500;
     border: none;
     border-radius: 3px;
+}
+
+.button {
+    display: block;
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+    font-size: 16px;
+    font-weight: 500;
+    border: none;
+    border-radius: 3px;
+    text-align: center;
+    margin-top: 10px;
 }
 
 
