--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -113,7 +113,8 @@ a {
     background-color: #fff;
     box-shadow: 0 1px 1px rgba(0,0,0,.15);
     height: 100%;
-    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .chat-header {
@@ -136,7 +137,7 @@ a {
 }
 
 #messageArea {
-    height: calc(100% - 120px);
+    flex-grow: 1;
     overflow-y: auto;
     padding: 20px;
     list-style-type: none;
@@ -179,8 +180,6 @@ a {
     padding: 20px;
     background-color: #f1f1f1;
     border-top: 1px solid #e0e0e0;
-    position: absolute;
-    bottom: 0;
     width: 100%;
 }
 
